[package]
name = "sol-quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.7"
solana-client = "1.16.4"
solana-sdk = "1.16.4"
solana-transaction-status = "1.16.4"
spl-memo = "4.0.0"
